--- a/index.html
+++ b/index.html
@@ -2,13 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="description" content="This project shows in real time the location of MBTA buses.">
     <title>Real Time Bus Tracker</title>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAsj07sCxlgdUWjnlKunUxpfPLB-rhPEc4"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="map"></div>
+    <header class="header">
+      <h1>
+        The Real Time Bus Tracking
+      </h1>
+    </header>
+    <section class="info">
+      <p>
+        This project shows in real time the location of MBTA buses.
+      </p>
+    </section>
+    <section class="map" id="map"></section>
+    <footer class="footer">
+      <section class="copy">
+        Copyright &copy 2022 - MITXPRO
+      </section>
+      <section class="author">
+        Made with <img src="./images/heart.png" alt="Love"> for <a href="https://github.com/arturomsoberanes" target="_blank">Arturo Soberanes</a>
+      </section>
+    </footer>
     <script src="./js/mapanimation.js"></script>
   </body>
 </html>
