--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="This project shows in real time the location of MBTA buses.">
     <title>Real Time Bus Tracker</title>
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAsj07sCxlgdUWjnlKunUxpfPLB-rhPEc4"></script>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyAsj07sCxlgdUWjnlKunUxpfPLB-rhPEc4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
